--- a/wp-content/themes/Basetheme/bower.json
+++ b/wp-content/themes/Basetheme/bower.json
@@ -8,11 +8,17 @@
   "private": true,
   "dependencies": {
     "modernizr": "2.8.2",
-    "bootstrap-sass-official": "3.3.5"
+    "bootstrap-sass-official": "3.3.5",
+    "chosen": "*"
   },
   "overrides": {
     "modernizr": {
       "main": "./modernizr.js"
+    },
+    "chosen": {
+      "main": [
+        "./chosen.jquery.min.js"
+      ]
     },
     "bootstrap-sass-official": {
       "main": [
